--- a/includes/css/app.css
+++ b/includes/css/app.css
@@ -27,6 +27,12 @@ span.label
 {
     line-height: 2em;
     background: white;
-    border: 1px solid gray;
+    border-radius: 5px;
+    border: 1px solid #d0d0d0;
     text-align: center;
+    width: 200px;
+    margin: 10px -100px;
+    position: fixed;
+    left: 50%;
+    z-index: 1000;
 }
